# opengl-ga

./: .gitignore  CMakeLists.txt  README  bitmap.h  display.c  display.h  gautil.c  gautil.h  generate.c  gltext.c  gltext.h  jpeg.c  jpeg.h  jpeg2.c  kernel.cl  makefile  makefile.osx  opencl.c  opencl.h  opengl-ga.vcxproj  opengl-ga.vcxproj.filters  pixbuf.c  pixbuf.h  polygon.c  polygon.h  population.c  population.h  util.c  util.h  vectimg.c  vectimg.h
jpeg/: Makefile  config.status  libtool
jpeg/.deps/: cdjpeg.Po  cjpeg.Po  djpeg.Po  jaricom.Plo  jcapimin.Plo  jcapistd.Plo  jcarith.Plo  jccoefct.Plo  jccolor.Plo  jcdctmgr.Plo  jchuff.Plo  jcinit.Plo  jcmainct.Plo  jcmarker.Plo  jcmaster.Plo  jcomapi.Plo  jcparam.Plo  jcprepct.Plo  jcsample.Plo  jctrans.Plo  jdapimin.Plo  jdapistd.Plo  jdarith.Plo  jdatadst.Plo  jdatasrc.Plo  jdcoefct.Plo  jdcolor.Plo  jddctmgr.Plo  jdhuff.Plo  jdinput.Plo  jdmainct.Plo  jdmarker.Plo  jdmaster.Plo  jdmerge.Plo  jdpostct.Plo  jdsample.Plo  jdtrans.Plo  jerror.Plo  jfdctflt.Plo  jfdctfst.Plo  (+25 more)
opengl/: display.c  display.h
